fix: sidebar logo spacing, page padding-top, reduce sidebar gap

--- a/resources/web/css/style.scss
+++ b/resources/web/css/style.scss
@@ -33,7 +33,7 @@ h3 {
     width: 100%;
     align-items: stretch;
     min-width: 0;
-    padding-top: 64px;
+    padding-top: 90px;
 }
 
 .web-header {
@@ -111,12 +111,12 @@ h3 {
     position: sticky;
     height: 100vh;
     min-height: 660px;
-    padding: 64px 0 45px;
+    padding: 100px 0 45px;
     flex-direction: column;
     align-items: flex-start;
     top: 0;
     left: 0;
-    gap: 60px;
+    gap: 24px;
     border-right: 1px solid $border;
 }
 
